crates/ic-lint/tests/snapshots/recursive_type__nested_struct_recursion.snap
---
source: crates/ic-lint/tests/recursive_type.rs
expression: output
---
error[recursive_type]: type `Node` contains itself without indirection
   ┌ test.idl:5:22
   │
 5 │                 Node next;  // Error: direct recursion in nested struct
   ·                      ^^^^ recursive member here
   └──
 note: recursive types must use indirection through sequences, maps, or @external annotations
