crates/ic-lint/tests/snapshots/recursive_type__recursion_through_array.snap
---
source: crates/ic-lint/tests/recursive_type.rs
expression: output
---
error[recursive_type]: type `Node` contains itself without indirection
   ┌ test.idl:3:18
   │
 2 │         struct Node {
 3 │             Node items[10];  // Error: array doesn't provide indirection
   ·                  ^^^^^ recursive member here
 4 │         };
   └──
 note: recursive types must use indirection through sequences, maps, or @external annotations
