crates/ic-lint/tests/snapshots/recursive_type__recursion_through_map_key.snap
---
source: crates/ic-lint/tests/recursive_type.rs
expression: output
---
error[recursive_type]: type `Node` contains itself without indirection
   ┌ test.idl:3:31
   │
 3 │             map<Node, string> children;  // Error: map key doesn't have indirection
   ·                               ^^^^^^^^ recursive member here
   └──
 note: recursive types must use indirection through sequences or @shared/@external annotations

warning[complex_key]: complex types as map keys are not standard
   ┌ test.idl:3:17
   │
 3 │             map<Node, string> children;  // Error: map key doesn't have indirection
   ·                 ^^^^ non-primitive map key
   └──
 note: only integers, strings, and enums may be used as map keys
