crates/ic-lint/tests/snapshots/recursive_type__recursion_through_map_value.snap
---
source: crates/ic-lint/tests/recursive_type.rs
expression: output
---
error[recursive_type]: type `Node` contains itself without indirection
   ┌ test.idl:3:31
   │
 3 │             map<string, Node> children;  // Error: map value doesn't have indirection
   ·                               ^^^^^^^^ recursive member here
   └──
 note: recursive types must use indirection through sequences or @shared/@external annotations
